# CryptoCommunity

./: pyproject.toml
CryptoCommunity/: manage.py
CryptoCommunity/CryptoCommunity/: asgi.py  settings.py  urls.py  wsgi.py
CryptoCommunity/templates/: index.html
