[tool.poetry]
name = "cryptocommunity"
version = "0.1.0"
description = ""
authors = ["abrigo132 <garipotter97@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
